# vplc

./: .directory  CMakeLists.txt  LICENSE  README.md  Tokenizer.ipp  correctWhitespace.py  desktop.ini  diff_checker_base.ipp  diff_checker_char.cpp  diff_checker_real.cpp  vpl_evaluate.py  vpl_evaluate.sh
